[tool.poetry]
name = "tornado-openapi3"
version = "0.2.0"
description = "Tornado OpenAPI 3 request and response validation library"
authors = ["Correl Roush <correl@gmail.com>"]
license = "MIT"
readme = "README.rst"
packages = [
    { include = "tornado_openapi3" },
]

[tool.poetry.dependencies]
python = "^3.7"
tornado = "^4 || ^5 || ^6"
openapi-core = "^0.13.4"

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
coverage = "*"
mypy = "*"
hypothesis = "*"
flake8 = "*"
pytest = "*"
pytest-cov = "*"
pytest-flake8 = "*"
pytest-mypy = "*"

[tool.pytest.ini_options]
addopts = "--cov=tornado_openapi3 --flake8 --mypy"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
