[tool.poetry]
name = "tornado-openapi3"
version = "1.0.0"
description = "Tornado OpenAPI 3 request and response validation library"
authors = ["Correl Roush <correl@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/correl/tornado-openapi3"
homepage = "https://github.com/correl/tornado-openapi3"
packages = [
    { include = "tornado_openapi3" },
]

[tool.poetry.dependencies]
python = "^3.7"
tornado = "^4 || ^5 || ^6"
openapi-core = "^0.13.4"
ietfparse = "^1.7.0"
typing-extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
coverage = "*"
mypy = "*"
hypothesis = "*"
flake8 = "*"
pytest = "*"
pytest-black = "*"
pytest-cov = "*"
pytest-flake8 = "*"
pytest-mypy = "*"
sphinx = "^3.5.1"
sphinx-rtd-theme = "^0.5.1"
pylint = "^2.7.1"

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov=tornado_openapi3 --black --flake8 --mypy --ignore docs"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
